<resources>
    <string name="app_name">Android quiz</string>
    <string name="heading">Android Basics</string>
    <string name="question_1">Every Android app must have the file AndroidManifest in its root directory:</string>
    <string name="view">View</string>
    <string name="layout">Layout</string>
    <string name="attribute">Attribute</string>
    <string name="activity">Activity</string>
    <string name="question_2">The basic building element of XML User interface is:</string>
    <string name="question_3">Android is a Linux based operating system:</string>
    <string name="question_4">What represents a single user interface screen?</string>
    <string name="question_5">What are the code names of Android?</string>
    <string name="bonbon">Bonbon</string>
    <string name="donut">Donut</string>
    <string name="honeycomb">Honeycomb</string>
    <string name="jelly_bean">Jelly Bean</string>
    <string name="yes">True</string>
    <string name="no">False</string>
    <string name="correct_answers">Correct answers</string>
    <string name="wrong_answers">Wrong answers</string>
    <string name="check">Check answers</string>
    <string name="reset">Reset</string>
    <string name="your_answer">Your answer</string>
</resources>
