<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorFrame"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        tools:context="com.example.android.androidquiz.MainActivity">

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="24dp"
            android:text="@string/heading"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:background="@drawable/layout_bx"
            android:backgroundTint="@color/colorBackground"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/question_1"
                android:textColor="@android:color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorFrame" />

            <RadioGroup
                android:id="@+id/radiogroup_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <RadioButton
                    android:id="@+id/answer_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:text="@string/yes"
                    android:textColor="@android:color/darker_gray" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:text="@string/no"
                    android:textColor="@android:color/darker_gray" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/question_2"
                android:textColor="@android:color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorFrame" />

            <RadioGroup
                android:id="@+id/radiogroup_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:text="@string/layout"
                    android:textColor="@android:color/darker_gray" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:text="@string/activity"
                    android:textColor="@android:color/darker_gray" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:text="@string/attribute"
                    android:textColor="@android:color/darker_gray" />

                <RadioButton
                    android:id="@+id/answer_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:text="@string/view"
                    android:textColor="@android:color/darker_gray" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/question_3"
                android:textColor="@android:color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorFrame" />

            <RadioGroup
                android:id="@+id/radiogroup_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <RadioButton
                    android:id="@+id/answer_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:text="@string/yes"
                    android:textColor="@android:color/darker_gray" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:text="@string/no"
                    android:textColor="@android:color/darker_gray" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/question_4"
                android:textColor="@android:color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorFrame" />

            <EditText
                android:id="@+id/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/your_answer"
                android:inputType="text"
                android:maxLines="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/question_5"
                android:textColor="@android:color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorFrame" />

            <CheckBox
                android:id="@+id/check_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/bonbon" />

            <CheckBox
                android:id="@+id/check_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/donut" />

            <CheckBox
                android:id="@+id/check_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/honeycomb" />

            <CheckBox
                android:id="@+id/check_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/jelly_bean" />

            <Button
                android:id="@+id/check_answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:onClick="submitAnswers"
                android:text="@string/check" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/chart"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/points_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@color/colorFrame"
                    android:textSize="40sp"
                    android:visibility="gone" />
            </RelativeLayout>

            <Button
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:onClick="resetQuiz"
                android:text="@string/reset"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>